ex01/make_output
src/main.cpp:20:17: error: ‘void t_throw_bureaucrat_too_high_grade_exception()’ declared ‘static’ but never defined [-Werror=unused-function]
   20 | static void     t_throw_bureaucrat_too_high_grade_exception();
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/main.cpp:48:17: error: ‘void t_throw_exception()’ defined but not used [-Werror=unused-function]
   48 | static void     t_throw_exception()
      |                 ^~~~~~~~~~~~~~~~~
src/main.cpp:39:17: error: ‘void t_create_bureaucrat_by_parameters(std::string, short unsigned int)’ defined but not used [-Werror=unused-function]
   39 | static void     t_create_bureaucrat_by_parameters(std::string name, unsigned short int grade)
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src/main.cpp:32:17: error: ‘void t_create_bureaucrat()’ defined but not used [-Werror=unused-function]
   32 | static void     t_create_bureaucrat(void)
      |                 ^~~~~~~~~~~~~~~~~~~
cc1plus: all warnings being treated as errors
[0;31mError compiling src/main.cpp[0m
[0;36mCompiling src/Bureaucrat.cpp[0m
/usr/bin/ld: cannot find .obj/main.o: No such file or directory
collect2: error: ld returned 1 exit status
[0;31mError creating MommyWhenIgrowUpIwantToBeAbureaucrat![0m
